--- a/index.html
+++ b/index.html
@@ -11,24 +11,32 @@
 </head>
 <body>
     <h1>Library</h1>
-
-    <div class="new-book">
-        <button class="new-book-button" onclick="openForm()">New Book</button>
+    <div class="openBtn">
+      <button class="openButton" onclick="openForm()"><strong>New Book</strong></button>
     </div>
+    <div class="loginPopup">
+      <div class="formPopup" id="popupForm">
+        <form action="/action_page.php" class="formContainer">
 
-    <div class="new-book-popup" id="popup-form">
-        <form action="/action_page.php" class="form-container">
             <h2>New Book</h2>
             <label for="title">Title</label>
-            <input type="text" id="title" name="title">
+            <input type="text" id="title" name="title" required>
+
             <label for="author"> Author</label>
-            <input type="text" id="author" name="author">
+            <input type="text" id="author" name="author" required>
+
             <label for="pages">Number of pages</label>
-            <input type="number" id="pages" name="pages">
+            <input type="number" id="pages" name="pages" required>
+
             <label for="read">Read already?</label>
             <input type="radio" name = "ans" value="yes"> Yes </br>
             <input type="radio" name = "ans" value="no"> No </br>
+
+            <button type="submit" class="button-submit">Submit</button>
+            <button type="button" class="button-close" onclick="closeForm()">Close</button>
+
         </form>
+      </div>
     </div>
 
     <table id="myTable">
@@ -41,3 +49,8 @@
     </table>
 </body>
 </html>
+
+<!--
+    finish getting the popup form lookin correct
+    https://www.w3docs.com/snippets/javascript/how-to-create-a-popup-form-using-javascript.html
+-->
