fix what happens when submit is hit

--- a/index.html
+++ b/index.html
@@ -14,27 +14,26 @@
     <button class="new-book-button" onclick="openForm()"><strong>New Book</strong></button>
     <div class="login-popup">
         <div class="form-popup" id="popup-form">
-        <form action="/action_page.php" class="form-container">
+        <form class="form-container">
             <label for="title">Title</label>
-            <input type="text" id="title" name="title" required>
+            <input type="text" id="title" required>
 
             <label for="author"> Author</label>
             <input type="text" id="author" name="author" required>
 
             <label for="pages">Number of pages</label>
-            <input type="number" id="pages" name="pages" required>
+            <input type="number"  id="pages" name="pages" required>
 
             <div>
               <label for="read">Read already?</label><br>
-              <input type="radio" name = "ans" value="yes"> Yes </br>
-              <input type="radio" name = "ans" value="no"> No </br>
+              <input type="radio" name = "ans" value="yes" required> Yes </br>
+              <input type="radio" name = "ans" value="no" required> No </br>
             </div>
 
             <div class="submit-buttons">
               <button type="submit" class="submit-button"><strong>Submit</strong></button>
               <button type="button" class="close-button" onclick="closeForm()">Close</button>
             </div>
-
         </form>
         </div>
     </div>
