submit fixed, need to add function to remove btn

--- a/index.html
+++ b/index.html
@@ -40,16 +40,13 @@
 
     <table id="myTable">
         <tr>
+            <th>#</th>
             <th>Title</th>
             <th>Author</th>
             <th>Pages</th>
             <th>Read</th>
+            <th>Remove?</th>
         </tr>
     </table>
 </body>
 </html>
-
-<!--
-    website for popup form if need be
-    https://www.w3docs.com/snippets/javascript/how-to-create-a-popup-form-using-javascript.html
--->
