--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <th>Title</th>
             <th>Author</th>
             <th>Pages</th>
-            <th>Read</th>
+            <th>Read?</th>
             <th>Remove?</th>
         </tr>
     </table>
